added post_comment,post like and updated post with like count
